--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TypeScript Tutorial</title>
+  <title>Finance</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="./financial-profit.png">
 </head>
 <body>
 
@@ -43,6 +45,6 @@
     <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
   </footer>
 
-  <script src='app.js'></script>
+  <script type="module" src='app.js'></script>
 </body>
 </html>
